<?xml version="1.0"?>
<package format="2">

  <name>octomap_mapping_planning</name>
  <version>1.0.0</version>
  <description>Octomap Mapping Planning</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
